remove .toList() call in Main and put it in RangeSetTest